dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  tls:
    - hosts:
      - dashboard.docloud.kr
      secretName: tls-secret
  rules:
  - host: dashboard.docloud.kr
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
